@@ -59,3 +59,4 @@ NJ - 14/11/04 - Tag to /framework/tags/REL-0.1.1
 NJ - 15/11/04 - Started implementing SQL to the bot.
 NJ - 15/11/04 - Worked out a config table system
 NJ - 15/11/04 - Implemented all the DB calls but have not yet got a NSPASSWD coloum in yet...
+NJ - 16/11/04 - Add mysql table create file...
